--- a/style.css
+++ b/style.css
@@ -29,10 +29,11 @@
 	     	background-color: blue;
 	     }
 	     table,th,td{
-
+            background-color: yellow;
 		}
 		td{
 			width:30;
-			height:40;
+			height:60;
 			background-color: green;
+			text-align: center;
 		}
